refactor(backend): improve security components and eliminate code duplication
JwtAuthenticationFilter:
- Add null/empty roles handling to prevent NullPointerException
- Move Bearer token extraction logic from JwtTokenProvider to filter (proper SoC)
- Filter empty role strings to prevent invalid authorities

JwtTokenProvider:
- Refactor generateToken methods to eliminate duplicate JWT building logic
- Extract getClaims() private method to eliminate JWT parser duplication
- Add io.jsonwebtoken.security.SecurityException import for proper exception handling

SecurityConfig:
- Externalize CORS origins to security.cors.allowed-origins property
- Make Swagger profile-conditional via security.swagger.enabled property
- Add @Value injections for configuration flexibility

These changes fix critical null handling bugs and improve code maintainability
through DRY principles.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>